--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #333333;
     padding: 10px;
-    color: #fff;
+    color: #ffffff;
     position: fixed;
     width: 100%;
     top: 0;
+    text-align: center;
 }
 
 main {
@@ -25,8 +26,8 @@ main {
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #333333;
+    color: #ffffff;
     padding: 10px;
     text-align: center;
 }
