--- a/style.css
+++ b/style.css
@@ -23,16 +23,15 @@ header {
 
 #discordlink {
     display: inline-block;
-    padding: 10px;
     background: url('https://static.vecteezy.com/system/resources/previews/018/930/718/original/discord-logo-discord-icon-transparent-free-png.png') center center no-repeat; 
     color: transparent; 
     text-decoration: none;
-    boarder-radius: 5px;
+    border-radius: 5px;
     background-size: cover;
 }
 
 #discordlink:hover {
-    background: url('https://static.vecteezy.com/system/resources/previews/018/930/718/original/discord-logo-discord-icon-transparent-free-png.png') center center no-repeat; 
+    background: url('https://cdn.icon-icons.com/icons2/3053/PNG/512/discord_macos_bigsur_icon_190238.png') center center no-repeat; 
     background-size: cover;
 }
 
