--- a/style.css
+++ b/style.css
@@ -25,12 +25,14 @@ header {
     display: inline-block;
     background: url('https://static.vecteezy.com/system/resources/previews/018/930/718/original/discord-logo-discord-icon-transparent-free-png.png') center center no-repeat; 
     color: transparent; 
+    padding: 50px;
     text-decoration: none;
     border-radius: 5px;
     background-size: cover;
 }
 
 #discordlink:hover {
+    padding: 50px;
     background: url('https://cdn.icon-icons.com/icons2/3053/PNG/512/discord_macos_bigsur_icon_190238.png') center center no-repeat; 
     background-size: cover;
 }
