--- a/style.css
+++ b/style.css
@@ -30,13 +30,24 @@ header {
     border-radius: 5px;
     background-size: cover;
 }
-
+ #discordlink::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            pointer-events: none; 
+}
 #discordlink:hover {
-    padding: 40px;
-    background: url('https://cdn.icon-icons.com/icons2/3053/PNG/512/discord_macos_bigsur_icon_190238.png') center center no-repeat; 
+    padding: 50px;
+    background: url('https://static.vecteezy.com/system/resources/previews/018/930/718/original/discord-logo-discord-icon-transparent-free-png.png') center center no-repeat; 
     background-size: cover;
 }
-
+#discordlink:hover span {
+    color: #ff4500;
+        }
 main {
     margin-top: 60px;
     padding: 20px;
