--- a/style.css
+++ b/style.css
@@ -56,6 +56,34 @@ main {
     margin-top: 60px;
     padding: 20px;
 }
+        .column {
+            width: 20%;
+            float: left;
+        }
+
+        .column h3 {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        .column ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .column li {
+            margin-bottom: 5px;
+        }
+
+        .column a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        .column a:hover {
+            text-decoration: underline;
+        }
 
 footer {
     background-color: #333333;
